--- a/themes/hugo-bearblog/layouts/partials/seo_tags.html
+++ b/themes/hugo-bearblog/layouts/partials/seo_tags.html
@@ -1,7 +1,21 @@
 <!-- Primary Meta Tags -->
-<meta name="title" content="{{ with .Title }}{{ . }}{{ else }}{{ .Site.Title }}{{ end }}" />
+<meta name="title" content="{{ with .Title }}{{ . }}{{ else }}{{ .Site.Title }}{{ end }} felix-red-panda" />
 <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}" />
 <meta name="keywords" content="{{ if .IsPage}}{{ range $index, $tag := .Params.tags }}{{ $tag }},{{ end }}{{ else }}{{ range $plural, $terms := .Site.Taxonomies }}{{ range $term, $val := $terms }}{{ printf "%s," $term }}{{ end }}{{ end }}{{ end }}" />
+
+<script type="application/ld+json">
+{
+    "@context": "https://schema.org/",
+    "@type": "ImageObject",
+    "contentUrl": "{{ .Site.BaseURL }}static/images/profile.jpg",
+    "creditText": "felix_red_panda",
+    "creator": {
+        "@type": "Organization",
+        "name": "felix_red_panda"
+    },
+    "copyrightNotice": "felix_red_panda"
+}
+</script>
 
 <!-- Open Graph / Facebook -->
 {{ template "_internal/opengraph.html" . }}
